--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,6 +17,7 @@ jobs:
         run: |
           docker build -t tyrant00/code-server-integration:${{ github.sha }} .
           docker tag tyrant00/code-server-integration:${{ github.sha }} tyrant00/code-server-integration:latest
+          docker tag tyrant00/code-server-integration:${{ github.sha }} dockerhub.tianfu.site:40443/tyrant00/code-server-integration:latest
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1 
@@ -27,4 +28,4 @@ jobs:
       - name: Push Docker image to Docker Hub
         run: |
           docker push tyrant00/code-server-integration:latest
-          docker push tyrant00/code-server-integration:${{ github.sha }}
+          docker push dockerhub.tianfu.site:40443/tyrant00/code-server-integration:latest
